# dsk

./: CHANGELOG.md  CMakeLists.txt  INSTALL  README.md  README.txt  quick-build.sh  simple_test.sh
doc/: CMakeLists.txt  human_log  makefile  paper.bib  paper.tex  response.txt
doc/figure-1/: droso_log  droso_log_rayan  droso_log_sorting_guillaume  ecoli_log  ecoli_log_rayan  figure.sh  guillaume_log  monitor-memory.sh  process-log.py  run-droso-test.sh  run-dsk.sh
scripts/: quick-build.sh  simple_test.sh
scripts/jenkins/: tool-dsk-build-debian7-64bits-gcc-4.7.sh  tool-dsk-build-macos-10.9.5-gcc-4.2.1.sh  tool-dsk-release-debian.sh
src/: DSK.cpp  DSK.hpp  main.cpp
test/: ERR039477.md5  IUPAC.fasta  file_index  file_index_gzip  file_index_mixed  k27.histo  longread.fasta  readN.fasta  readN.histo  rlong.histo  short.parse_results  shortread.fasta  test_ERR039477.sh
utils/: CMakeLists.txt  dsk2ascii.cpp  plot-histo.R  plot-histo2D.R
